--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-loader": "^15.9.5",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0"
   }
