--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@vue/compiler-sfc": "^3.0.3",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
     "css-loader": "^5.0.1",
+    "express": "^4.17.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
